...
              </Text>
              <Textarea
                placeholder={t('additionalDetailsPlaceholder')}
                value={details}
                onChangeText={setDetails}
                drawerInput
                testID="report-details"
              />
            </View>

            <View className="gap-3 border-t border-input pt-4">
              <Text variant="large" className="mb-2">
                {t('options')}
...
          </View>
        </KeyboardAwareScrollView>

        <DrawerFooter>
          <Button
            onPress={() => void handleSubmit()}
            testID="report-submit"
            accessibilityLabel="report-submit"
            disabled={!reason || report.isCreatingReport || hasAlreadyReported}
            loading={report.isCreatingReport}
          >
            <Text>
              {report.isCreatingReport ? t('submitting') : t('submitReport')}
...
