...
                <TabsList className="w-full">
                  {isAuthenticated ? (
                    <>
                      <TabsTrigger value="my" testID="projects-tab-my">
                        <Text>{t('myProjects')}</Text>
                      </TabsTrigger>
                      <TabsTrigger value="all" testID="projects-tab-all">
                        <Text>{t('allProjects')}</Text>
                      </TabsTrigger>
                    </>
                  ) : (
                    <>
                      <TabsTrigger value="my" testID="projects-tab-my">
...
                  <View className="flex flex-row items-center gap-2">
                    <Input
                      className="flex-1"
                      placeholder={t('searchProjects')}
                      value={searchQuery}
                      onChangeText={setSearchQuery}
                      testID="projects-search"
                      selectTextOnFocus
                      prefix={SearchIcon}
                      prefixStyling={false}
                      size="sm"
                      returnKeyType="search"
                      suffix={
...
