...
        variant={isHighlighted ? 'default' : 'outline'}
        size={showPercent ? 'sm' : 'icon'}
        className={cn(showPercent && 'py-0')}
        disabled={disabled}
        loading={isPublishing}
        onPress={() => setIsDrawerOpen(true)}
        testID="quest-publish"
      >
        {!isPublishing && (
          <View pointerEvents="none" className="flex-row items-center gap-0.5">
            <Icon as={CloudUpload} size={18} className={foregroundClass} />
            {showPercent && (
              <>
                <Icon as={ListChecks} size={14} className={foregroundClass} />
                <Text
                  className={cn(
                    'native:text-xs text-xs font-semibold',
                    foregroundClass
                  )}
                  testID="quest-publish-percent"
                >
                  {progress.percent}%
                </Text>
              </>
            )}
          </View>
...
