...
        <View className="flex-1 flex-row gap-2 overflow-hidden">
          {router.canGoBack() && !isProjectsView && (
            <Button
              variant="ghost"
              size="icon"
              onPress={() => router.back()}
              testID="nav-back"
            >
              <Icon as={ChevronLeftIcon} className="size-6" />
            </Button>
          )}
          <View className="relative h-11 flex-1">
            <ScrollView
...
